# CS-425-Team-20

./: .gitignore  Open3D License.txt  README.md
C3PO/C3PO/: App.xaml  App.xaml.cs  C3PO.csproj  C3PO.sln  MainWindow.xaml  MainWindow.xaml.cs
C3PO/C3PO/C3PO/: App.xaml  App.xaml.cs  C3PO.csproj  MainWindow.xaml  MainWindow.xaml.cs
C3PO/trashed/PCFilter/: CMakeLists.txt
C3PO/trashed/PCFilter/PCFilter/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PCFilter.sln  PCFilter.vcxproj  PCFilter.vcxproj.filters  PCFilterConfig.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
C3PO/trashed/PCFilter/PCFilter/include/: Filter.h
C3PO/trashed/PCFilter/PCFilter/src/: Filter.cpp
C3PO/trashed/PCFilter/PCFilterUnitTest/: PCFilterUnitTest.cpp  PCFilterUnitTest.vcxproj  PCFilterUnitTest.vcxproj.filters
C3PO/trashed/PointCloudReconstruction/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  PCFormater.cpp  PCFormater.h  PCReconstructor.cpp  PCReconstructor.h  WriteOut.hpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  reconstruct.cpp  reconstruct.sln  reconstruct.vcxproj  reconstruct.vcxproj.filters
C3PO_v2/: 3CPO_v2.sln
C3PO_v2/3CPO_v2/: 3CPO_v2.csproj  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  SettingsPage.xaml  SettingsPage.xaml.cs
app/C3PO/: C3PO.deps.json
jason-mills/: Rendering Steps.txt  pc2png.py
jason-mills/Open3D/: Editor.py  EditorDriver.py  PointCloudStruct.py  Structs.py  camera_config.json  clean.py  config.json  final.ply  icp.py  mesh.py  out0.ply  out1.ply  out10.ply  out11.ply  out2.ply  out3.ply  out4.ply  out5.ply  out6.ply  out7.ply  out8.ply  out9.ply  process.py  reconstruct.py  render.py  scan.py  temp.py  test.off  test.ply  test.py  test.stl  visualizer.py  xyzThroughICP.py  xyzToPly.py
jason-mills/Point Cloud Processing/: Point Cloud Processing.sln
jason-mills/Rendering/: Rendering.sln
jason-mills/Scanning/: Scanning.sln
jeau-labyorteaux/: READ_ME.txt  RenderDriver.py  Renderer.py  Source.cpp  Source_with_serial.cpp  Specific_degrees.cpp  arduino_shenanegins_fixed.txt  camera stand v2.gx  copy_for_jason.txt  export_to_py.cpp  hand.json  high-accuracy.json  in_person_hey_this_works_now.txt  in_person_update.cpp  manual.ino  neeew.json  small-objects.json  spin_n_stop_v2.ino  test2.json  test444.json  unitTestCode.cpp  v1.cpp  vector_export.cpp.txt
jeau-labyorteaux/basic_stepper_motor/: basic_stepper_motor.ino
jeau-labyorteaux/file_viewer/: GUI.py  main.py
jeau-labyorteaux/motor_code_with_light/: motor_code_with_light.ino
(+210 files in other folders)
